--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="waqas.airtennis">
+    package="com.mwaqaspervez.airtennis">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
@@ -10,22 +11,22 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity
-            android:name=".Activity.LoginActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
-
+            android:name="com.mwaqaspervez.airtennis.activity.MainActivity"
+            android:theme="@style/AppTheme.NoActionBars">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
 
         <activity
-            android:name=".Activity.SignupActivity"
-            android:label="Signup" />
+            android:name=".activity.HowToPlay"
+            android:theme="@style/AppTheme.NoActionBars" />
+        <activity
+            android:name=".activity.AboutUs"
+            android:theme="@style/AppTheme.NoActionBars" />
 
     </application>
 
