--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:allowBackup="true"
@@ -29,6 +30,7 @@
             android:theme="@style/AppTheme.NoActionBars" />
         <activity
             android:name=".activity.GameActivity"
+            android:launchMode="singleInstance"
             android:theme="@style/AppTheme.NoActionBars" />
 
     </application>
